package edu.smc.data;

import edu.smc.base.User;

public class Administrator extends User {
    public Administrator(String username, String password) {
        super(username, password);
    }
}
